# apple2pi

./: .gitignore  Makefile  README.md
rust/: +  .swp  Cargo.toml  a2pi.elf  flash.sh  layout.rs  readme.configure_kb_layout.md  readme.md  spec.configure_kb_layout.md  todo.md
rust/a2pi_keymaps/: kbmap.json
rust/repl/: keycodes.rs  readme.md
rust/scripts/: build_keymap.ts  build_pico_map.ts  build_vdev_map.ts  discern_keypress.py  imports  kbmap.json  lazy_features.ts  lazy_imports.ts  pico_map  vdev_map
rust/src/: errors.rs  lib.rs  main.rs  mod.rs  state.rs
rust/src/drivers/kb/: driver.rs  handshake.rs  input.rs  mod.rs  state.rs
rust/src/drivers/kb/events/: input.rs
rust/src/drivers/kb/vdev/: .emitter.rs.swp  .key_codex.rs.swp  device.rs  emitter.rs  key_codex.rs  mod.rs
rust/src/drivers/no_std/kb/: driver.rs  input.rs  mod.rs  state.rs
rust/src/drivers/no_std/kb/kbmap/: hid.rs  mod.rs
rust/src/drivers/shared/kb/: traits.rs
rust/src/entrypoints/: asdf.rs  pico.rs
rust/src/utils/: hex.rs
share/: a2pi.service
