[package]
name = "a2pi-rs"
version = "0.1.0"
edition = "2021"
author = "Dominic DiGiacomo"

workspaces = [
  "repl/",
  "src/",
]

[[bin]]
name = "repl_keycodes"
path = "./repl/keycodes.rs"

[dependencies]
mio = "0.8"
mio-serial = "5.0.1"
hex = "0.4.3"
repl-rs = "0.2.7"
indoc = "2"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

signal-hook = "0.3.4"
parking_lot = "0.12.1"

enigo = "0.1.2"
